@@ -708,7 +708,7 @@ static void g_print_qual_name( g_state_t *g, c_ast_t const *ast ) {
   switch ( ast->kind ) {
     case K_POINTER:
       if ( qual_stids != TS_NONE && (g->flags & C_GIB_CAST) == 0 &&
-           !c_ast_is_ptr_to_kind( ast, K_FUNCTION ) ) {
+           !c_ast_is_ptr_to_kind_any( ast, K_FUNCTION ) ) {
         //
         // If we're printing a type as a "using" declaration and there's a
         // qualifier for the pointer, print a space before it.  For example:
