@@ -1,0 +1,1 @@
+cdecl @ @ @ explain void (*restrict p)() @ 65
